// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog /> when it is closed renders 1`] = `
<body>
  <div />
</body>
`;

exports[`<Dialog /> when it is open renders 1`] = `
<body>
  <div />
  <dialog
    class="fixed inset-0 rounded bg-black "
    open=""
    style="opacity: 0;"
  >
    content
  </dialog>
</body>
`;
